# SendingSystem

./: .gitignore  README.md
Client/: settings.gradle.kts
Client/app/: build.gradle.kts
Client/app/src/androidTest/java/com/example/sendingsystemclient/: ExampleInstrumentedTest.java
Client/app/src/main/: AndroidManifest.xml
Client/app/src/main/java/com/example/sendingsystemclient/: MainActivity.java
Client/app/src/main/res/values/: strings.xml  themes.xml
Client/app/src/main/res/values-night/: themes.xml
Client/app/src/test/java/com/example/sendingsystemclient/: ExampleUnitTest.java
Client/gradle/wrapper/: gradle-wrapper.properties
Server/DesktopServer/: CMakeLists.txt  CMakePresets.json
Server/DesktopServer/src/: Server.c  Server.h
Server/DesktopServer/src/PrintProcedures/: PintProcedures.c  PintProcedures.h
Сервер/Server/: CMakeLists.txt  CMakePresets.json
Сервер/Server/src/: Server.c
